--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -36,3 +36,22 @@ allow_writeable_chroot=YES
 # i. Excepción para usuarios que no están enjaulados
 chroot_list_enable=YES
 chroot_list_file=/etc/vsftpd.chroot_list
+
+# Habilitar TLS/SSL
+ssl_enable=YES
+
+# Se fuerza a utilizar TSL/SSL en todas las operaciones a los usuarios autentificados (no anónimos)
+force_local_data_ssl=YES
+force_local_logins_ssl=YES
+
+# Uso del protocolo SSLv2 y TLSv1 (por defecto SSLv1 ya está deshabilitado)
+ssl_sslv2=YES
+ssl_tlsv1=YES
+
+# Indicamos la ruta del certificado del servidor.
+rsa_cert_file=/etc/ssl/certs/irene.test.pem
+rsa_private_key_file=/etc/ssl/certs/irene.test.pem
+
+# Algunos clientes FTPS requieren el uso de las dos siguientes directivas para lograr la conexión con el servidor
+ssl_ciphers=HIGH
+require_ssl_reuse=NO
